Translate Text From English to French

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,123 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+
+  ### Content
+  home: "Home"
+  dashboard: "Dashboard"
+  categories: "Categories"
+  expenses: "Expenses"
+  incomes: "Revenus"
+  all_incomes: "All Incomes"
+  all_expenses: "All Expenses"
+  statistics: "Statistics"
+  driver: "Driver"
+  insurances: "Insurances"
+  insurance: "Insurance"
+  insurer: "Insurer"
+  breaks: "Breaks"
+  break: "Break"
+  damages: "Damages"
+  damages: "Damage"
+  owner_takes: "Owner Takes"
+  owner_take: "Owner Take"
+  manager_takes: "Manager Takes"
+  manager_take: "Manager Take"
+  owners: "Owners"
+  owner: "Owner"
+  drivers: "Drivers"
+  damage_types: "Damages"
+  damage_type: "Damage"
+  fuel_types: "Fuel Types"
+  break_causes: "Break Causes"
+  break_cause: "Break Cause"
+  insurers: "Insurers"
+  vehicle: "Vehicle"
+  vehicles: "Vehicles"
+  go_back: "Previous"
+  add_a_new_break: "Add a Break"
+  add_a_new_break_cause: "Add a Break Cause"
+  add_a_new_insurance: "Add an Insurance"
+  add_a_new_damage: "Add a Damage"
+  add_a_new_model: "Add a Car Model"
+  add_a_new_driver: "Add a Driver"
+  add_a_new_cab: "Add a Vehicle"
+  add_a_new_fuel_type: "Add a Fuel Type"
+  add_a_new_owner_take: "Add an Owner Take"
+  add_a_new_manager_take: "Add a Manager Take"
+  add_a_new_owner: "Add an Owner"
+  add_a_new_insurer: "Add an Insurer"
+  preview: "Preview"
+  show_more: "Show More"
+  global_expenses: "Total of Expenses"
+  global_incomes: "Total of Incomes"
+  starting_date: "Starting Date"
+  end_date: "End Date"
+  delay: "Delay"
+  amount: "Amount"
+  days: "Days"
+  birth_date: "Birth Date"
+  full_name: "Full Name"
+  mobile_phone: "Mobile Phone"
+  home_phone: "Home Phone"
+  driver_license_number: "Driver License Number"
+  save: "Save"
+  attached_file: "Attached File"
+  name: "Name"
+  address: "Address"
+  phone: "Phone"
+  insurer_name: "Insurer Name"
+  expiration_date: "Expiration Date"
+  cab: "Taxi"
+  labor: "Labor"
+  mileage: "Mileage"
+  driver_responsible: "Driver Responsible"
+  new: "New"
+  edit: "Eidt"
+  delete: "Delete"
+  detail: "Detail"
+  home_address: "Home Address"
+  cab_model: "Taxi Model"
+  model_name: "Model Name"
+  manufacturer_year: "Manufacturer Year"
+  sheet_metal: "Sheet metal"
+  power_hp: "Power HP"
+  number_of_places: "Number of Places"
+  picture: "Image"
+  resend_unlock_instructions: "Resend Unlock Instructions"
+  resend_confirmation_instructions: "Resend Confirmation Instructions"
+  sign_up: "Sign up"
+  already_have_an_account: "Already have an account"
+  login: "Login"
+  characters_minimum: "Characters Minimum"
+  password_confirmation: "Password Confirmation"
+  password: "Password"
+  forgot_password: "Forgot Password"
+  remember_me: "Remember Me"
+  dont_have_an_account: "Don't have an account"
+  enter_your_email_msg: "Enter your e-mail address and we will send you an e-mail with instructions to reset your password."
+  send_me_reset_instructions: "Send Me Reset Instructions"
+  your_text: "Your Text"
+  are_you_sure: "Are you sure"
+  signed_as: "Signed as"
+  no_data: "No Data"
+  license_plate: "License Plate"
+  total_mileage: "Total Mileage"
+  agreement_number: "Agreement Number"
+  cab_model: "Cab Model"
+  cab_models: "cab Models"
+  damage: "Cause"
+  damage_cause: "Damage Cause"
+  select_a_model: "Select a Model"
+  select_a_manager: "Select a Manager"
+  select_an_owner: "Select an Owner"
+  select_a_break_cause: "Select a Break Cause"
+  select_a_damage: "Select a Damage"
+  no_person_charge: "No Person Charge"
+  labor_amount: "Don't forget to include the labor amount"
+  no_one: "No One"
+  your_profile: "Your Porfile"
+  sign_out: "Sign out"
+  error: "Error"
+  month: "Month"
+  year: "Year"
