--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,3 +150,6 @@ en:
   error: "Error"
   month: "Month"
   year: "Year"
+  update: "Update"
+  delete_this_account: "Delete This Account"
+  current_password: "Current Password"
